--- a/environment.yml
+++ b/environment.yml
@@ -1,30 +1,30 @@
 name: anomaly_detection
 channels:
-  - pytorch
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8
-  - pytorch=1.13.1
-  - torchvision=0.14.1
-  - cudatoolkit=11.7
-  - numpy=1.23.5
-  - scipy=1.9.3
-  - scikit-learn=1.1.3
-  - pandas=1.5.2
-  - matplotlib=3.6.2
-  - seaborn=0.12.1
-  - plotly=5.11.0
-  - opencv=4.6.0
-  - albumentations=1.3.0
-  - tqdm=4.64.1
-  - pyyaml=6.0
-  - hydra-core=1.3.2
-  - tensorboard=2.11.0
-  - jupyter=1.0.0
-  - pip=22.3.1
+  - python=3.11
+  - numpy
+  - scipy
+  - scikit-learn
+  - pandas
+  - matplotlib
+  - seaborn
+  - plotly
+  - opencv
+  - albumentations
+  - tqdm
+  - pyyaml
+  - hydra-core
+  - tensorboard
+  - jupyter
+  - pip
   - pip:
-    - torchmetrics==0.11.0
-    - einops==0.6.0
-    - diffusers==0.15.0
-    - transformers==4.26.1
+      - torch==2.2.1+cu126
+      - torchvision==0.17.1+cu126
+      - torchaudio==2.2.1+cu126
+      - --extra-index-url https://download.pytorch.org/whl/cu126
+      - torchmetrics
+      - einops
+      - diffusers
+      - transformers
